--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<!--<div class="container-fluid">-->
-<div class="container">
+<div class="container-fluid">
+<!--<div class="container">-->
   <h1>{{title}}</h1>
   <app-deliveries></app-deliveries>
 </div>
