add sticky header

--- a/src/app/deliveries/deliveries.component.html
+++ b/src/app/deliveries/deliveries.component.html
@@ -1,20 +1,21 @@
 <div id="fullScreen">
-    <form>
-        <div class="row">
-            <div class="col-md-auto">
-                <h1>Leveringen Fruity Line BV</h1>
-            </div>
-            <div class="custom-file mb-3 col">
-                <input #fileInput class="custom-file-input" id="validatedCustomFile" type="file" accept=".csv" (click)="fileInput.value = null" value="" (change)="handleFileSelect($event)" required />
-                <label class="custom-file-label" data-browse="Bestand kiezen" for="validatedCustomFile">Een csv-bestand kiezen...</label
-        >
+  <form>
+    <div class="row">
+      <div class="col-md-auto">
+        <h1>Leveringen Fruity Line BV</h1>
+      </div>
+      <div class="custom-file mb-3 col">
+        <input #fileInput class="custom-file-input" id="validatedCustomFile" type="file" accept=".csv"
+          (click)="fileInput.value = null" value="" (change)="handleFileSelect($event)" required />
+        <label class="custom-file-label" data-browse="Bestand kiezen" for="validatedCustomFile">Een csv-bestand
+          kiezen...</label>
       </div>
     </div>
   </form>
 
   <div *ngIf="table && table.length">
     <table class="table table-hover">
-      <thead>
+      <thead class="sticky-top">
         <tr>
           <th scope="col">Ordernummer</th>
           <th scope="col">Crediteur</th>
@@ -24,10 +25,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr
-          *ngFor="let cel of table | supplierFilter: filterArgs"
-          appChangeColor
-        >
+        <tr *ngFor="let cel of table | supplierFilter: filterArgs" appChangeColor>
           <td>{{ cel.OrderNummer }}</td>
           <td>{{ cel.Crediteur }}</td>
           <td>{{ cel.Dock_Lang }}</td>
